# CommonLibSSE-NG

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json  xmake-rules.lua  xmake.lua
.github/: update_vcpkg_baseline.py  update_vcpkg_baselines.py
.github/workflows/: main_ci.yml  maintenance.yml  send_repository_dispatch.yml  update_vcpkg_baseline.yml  update_vcpkg_baselines.yml
cmake/: config.cmake.in  sourcelist.cmake
include/RE/: RTTI.h  Skyrim.h
include/RE/B/: BGSNumericIDIndex.h  BGSSaveLoadGame.h  BGSSaveLoadManager.h  BSPortalSharedNode.h  BSShader.h  BSShadowDirectionalLight.h  BSTArray.h  BSTHashMap.h  BSTTuple.h
include/RE/C/: Color.h
include/RE/E/: EnchantConstructMenu.h  Explosion.h
include/RE/H/: Hazard.h  hkpRayHitCollector.h
include/RE/L/: LoggingDisabler.h
include/RE/M/: MagicTarget.h  MapCamera.h
include/RE/N/: NiBillboardNode.h  NiDirectionalLight.h  NiGeometry.h  NiPSysModifier.h  NiPoint2.h  NiPoint3.h  NiSwitchNode.h
include/RE/P/: PackUnpack.h  PlayerCharacter.h
include/RE/R/: RaceSexMenu.h
include/RE/S/: ScriptEventSourceHolder.h  ShaderAccumulator.h  ShadowSceneNode.h  ShadowState.h  State.h
include/RE/T/: TESAmmo.h  TESDataHandler.h  TESForm.h  TESObjectCELL.h  TESRace.h  TintMask.h
include/RE/U/: UI.h  UnlinkedTypes.h
include/SKSE/: Interfaces.h
include/SKSE/Impl/: PCH.h
src/RE/I/: InventoryChanges.cpp
src/RE/M/: MenuControls.cpp
src/RE/P/: PlayerCharacter.cpp
src/RE/R/: Renderer.cpp
src/RE/T/: TESForm.cpp  TESObjectREFR.cpp
src/RE/U/: UI.cpp
